--- a/src/app/student-form/student-form.component.html
+++ b/src/app/student-form/student-form.component.html
@@ -34,6 +34,6 @@
     </div>
     <div mat-dialog-actions class="action">
         <button mat-raised-button type="button" [mat-dialog-close]="false">Cancelar</button>
-        <button mat-raised-button color="primary" type="submit">{{data ? 'Update': 'Salvar'}}</button>
+        <button mat-raised-button color="primary" type="submit">{{data ? 'Salvar': 'Salvar'}}</button>
     </div>
 </form>
